2010-01-17  Corinna Vinschen  <corinna@vinschen.de>

	* libc/locale/locale.c (loadlocale): Change comments to refer to
	ISO 639-3 rather than 639-2.

2010-01-17  Corinna Vinschen  <corinna@vinschen.de>

	* libc/locale/locale.c (loadlocale): Allow three character
	language codes to accommodate ISO 639-2 codes.

2010-01-17  Corinna Vinschen  <corinna@vinschen.de>

	* libc/locale/locale.c (lc_ctype_charset): Disable defaulting to
	"UTF-8" on Cygwin.
	(lc_message_charset): Ditto.
	(loadlocale): Disable setting charset of the "C" locale to "UTF-8" on
	Cygwin.
	* libc/stdlib/mbtowc_r.c (__mbtowc): Add Cygwin-specific comment.
	* libc/stdlib/wctomb_r.c (__wctomb): Ditto.

2010-01-14  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/sys/_default_fcntl.h (O_CLOEXEC): Define as _FNOINHERIT.
	(F_DUPFD_CLOEXEC): Define for Cygwin.
	* libc/include/sys/unistd.h (dup3): Define for Cygwin.
	(pipe2): Ditto.

2010-01-14  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdio/vfprintf.c (_VFPRINTF_R): Just wave bytes invalid in
	the current charset through.

2010-01-11  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/posix/telldir.c (_cleanupdir): Fixed usage of freed memory.

2010-01-11  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/math.h (log2, log2f): Disable macro versions for C++,
	as they are incompatible with OpenMP/C++ headers.

2010-01-10  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdlib/mbtowc_r.c (__ascii_mbtowc): Disallow conversion of
	non-ASCII chars on Cygwin.
	* libc/stdlib/wctomb_r.c (__ascii_wctomb): Ditto.

2009-12-22  Eric Blake  <ebb9@byu.net>

	* libc/include/sys/unistd.h (suboptarg, getsubopt): Move...
	* libc/include/stdlib.h: ...here, to match POSIX for getsubopt.

2009-12-17  Jeff Johnston  <jjohnstn@redhat.com>

	* NEWS: Update with 1.18.0 info.
	* README: Ditto.
	* acinclude.m4: Change version number to 1.18.0.
	* aclocal.m4: Regenerated.
	* configure: Ditto.
	* doc/aclocal.m4: Ditto.