@@ -13,20 +13,25 @@ _DEFUN (_wcstombs_r, (reent, s, pwcs, n, state),
   char *ptr = s;
   size_t max = n;
   char buff[8];
-  int i, num_to_copy;
+  int i, bytes, num_to_copy;
 
   if (s == NULL)
     {
       size_t num_bytes = 0;
       while (*pwcs != 0)
-         num_bytes += __wctomb (r, buff, *pwcs++, __locale_charset (), state);
+	{
+	  bytes = __wctomb (r, buff, *pwcs++, __locale_charset (), state);
+	  if (bytes == -1)
+	    return -1;
+	  num_bytes += bytes;
+	}
       return num_bytes;
     }
   else
     {
       while (n > 0)
         {
-          int bytes = __wctomb (r, buff, *pwcs, __locale_charset (), state);
+          bytes = __wctomb (r, buff, *pwcs, __locale_charset (), state);
           if (bytes == -1)
             return -1;
           num_to_copy = (n > bytes ? bytes : (int)n);
