@@ -1,3 +1,8 @@
+2010-01-19  Corinna Vinschen  <corinna@vinschen.de>
+
+	* libc/stdlib/wcstombs_r.c (_wcstombs_r): Handle invalid characters
+	correctly also in the s==NULL case.
+
 2010-01-17  Corinna Vinschen  <corinna@vinschen.de>
 
 	* libc/locale/locale.c (loadlocale): Change comments to refer to
